--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,10 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation 'com.google.android.gms:play-services-maps:12.0.0'
+    implementation 'com.google.android.gms:play-services-location:12.0.0'
+    implementation 'com.akexorcist:googledirectionlibrary:1.1.1'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation 'com.android.support:design:27.1.1'
 }
