--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,5 @@ dependencies {
     implementation 'com.akexorcist:googledirectionlibrary:1.1.1'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.google.maps.android:android-maps-utils:0.4+'
 }
